k8s/base/network-policies/allow-backend-to-redis.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-sample-app-backend-to-redis
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: sample-app
      app.kubernetes.io/component: sample-app-redis

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sample-app
              app.kubernetes.io/component: sample-app-backend

      ports:
        - protocol: TCP
          port: 6379
