k8s/base/network-policies/default-deny-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sample-app-default-deny-ingress
spec:
  podSelector: {}

  policyTypes:
    - Ingress
